--- a/TechVJ/template/req.html
+++ b/TechVJ/template/req.html
@@ -1,3 +1,5 @@
+<!--  Don't Remove Credit @VJ_Bots Subscribe YouTube Channel For Amazing Bot @Tech_VJ Ask Doubt on telegram @KingVJ01 -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -254,7 +256,7 @@
                     </a>
                   </section>
 
-                  <!-- For LazyDeveloper & creatorrio // credit --- Please don't remove footer credit -->
+                  <!-- For Tech VJ & VJBots // credit --- Please don't remove footer credit -->
                   <div class="row flex-row-reverse text-secondary justify-content-center align-items-center">
                       <div class="col-lg-6 col-12 justify-content-center align-items-center text-center p-1 wow animate__animated animate__fadeInRight">
                         <ul class="navbar-nav">
@@ -294,7 +296,7 @@
                 var theDate=new Date() 
                     document.write(theDate.getFullYear()) 
             </script> Copyright :
-                <a class="bg-clip-text text-[16px] text-transparent bg-gradient-to-r from-pink-500 to-violet-500 font-bold tracking-wide px-1" href="https://telegram.me/vj_botz">Tech VJ</a>
+                <a class="bg-clip-text text-[16px] text-transparent bg-gradient-to-r from-pink-500 to-violet-500 font-bold tracking-wide px-1" href="https://telegram.me/vj_bots">Tech VJ</a>
                 
                 All right reserved
             </div>   
@@ -415,4 +417,5 @@
 </body>
 </html>
 
-<!--  Don't Remove Credit @VJ_Bot Subscribe YouTube Channel For Amazing Bot @Tech_VJ Ask Doubt on telegram @KingVJ01 -->
+<!--  Don't Remove Credit @VJ_Bots Subscribe YouTube Channel For Amazing Bot @Tech_VJ Ask Doubt on telegram @KingVJ01 -->
+
